# hw_strategygame

./: CMakeLists.txt  README.md  build.sh  rebuild.sh
client/: CMakeLists.txt
client/include/: client_main.hpp
client/src/: client_main.cpp
common/: CMakeLists.txt
common/include/: ComponentInstance.hpp  ComponentType.hpp  EntityInstance.hpp  EntityType.hpp  EntityTypeRegistry.hpp  dummy_file.hpp
common/proto/: components.proto  entity.proto
common/src/: ComponentInstance.cpp  ComponentType.cpp  EntityInstance.cpp  EntityType.cpp  EntityTypeRegistry.cpp  dummy_file.cpp
common_tests/: CMakeLists.txt
common_tests/include/: common_tests_main.hpp
common_tests/src/: common_tests_main.cpp
editor/: CMakeLists.txt
editor/include/: editor_main.hpp
editor/src/: editor_main.cpp
